--- a/style.css
+++ b/style.css
@@ -1,1 +1,99 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  scroll-behavior: smooth;
+  background: #12fcc8;
+  background: linear-gradient(80deg, #12fcc8 0%, #336ef1 48%, #e200ff 100%);
+  background-size: 300% 100%;
+  -webkit-animation: bacrotate 10s linear infinite  alternate;
+          animation: bacrotate 10s linear infinite  alternate;
+}
+
+@-webkit-keyframes bacrotate {
+  0% {
+    background-position: 0% 100%;
+  }
+  50% {
+    background-position: 50% 100%;
+  }
+  100% {
+    background-position: 00% 100%;
+  }
+}
+
+@keyframes bacrotate {
+  0% {
+    background-position: 0% 100%;
+  }
+  50% {
+    background-position: 50% 100%;
+  }
+  100% {
+    background-position: 00% 100%;
+  }
+}
+
+.container {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sampledivs {
+  width: 70%;
+  height: 50vh;
+  margin: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.slider {
+  position: fixed;
+  z-index: 1000;
+  top: 50%;
+  -webkit-transform: rotateZ(90deg) translateY(-550%);
+          transform: rotateZ(90deg) translateY(-550%);
+  right: 0;
+}
+
+.slider input {
+  width: 300px;
+  background-color: transparent;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.slider input::-moz-range-thumb {
+  width: 30px;
+  height: 30px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+.slider input::-moz-range-track {
+  width: 300px;
+  height: 10px;
+  border-radius: 20px;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+/*# sourceMappingURL=style.css.map */
