--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
           animation: bacrotate 10s linear infinite  alternate;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 @-webkit-keyframes bacrotate {
   0% {
     background-position: 0% 100%;
@@ -50,6 +54,11 @@ body {
           align-items: center;
 }
 
+.scrolled {
+  font-size: 3rem;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 .sampledivs {
   width: 70%;
   height: 50vh;
@@ -83,8 +92,8 @@ body {
 }
 
 .slider input::-moz-range-thumb {
-  width: 30px;
-  height: 30px;
+  width: 2rem;
+  height: 2rem;
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 30px;
   cursor: pointer;
@@ -93,7 +102,7 @@ body {
 .slider input::-moz-range-track {
   width: 300px;
   height: 10px;
-  border-radius: 20px;
+  border-radius: 1rem;
   background-color: rgba(0, 0, 0, 0.4);
 }
 /*# sourceMappingURL=style.css.map */
