--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,7 @@ body{
     background-size: 300% 100%;
     animation :bacrotate 10s linear infinite  alternate;
 }
+body::-webkit-scrollbar { display: none; }
 @keyframes bacrotate{
     0%{	background-position: 0% 100%;}
     50%{	background-position: 50% 100%;}
@@ -18,6 +19,11 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.scrolled{
+    font-size: 3rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 
 .sampledivs{
@@ -40,8 +46,8 @@ body{
         background-color: transparent;
         transition: all 0.5s;
         &::-moz-range-thumb{
-            width: 30px;
-            height: 30px;
+            width: 2rem;
+            height: 2rem;
             background-color:rgba($color: white, $alpha: 0.8);
             border-radius: 30px;
             cursor: pointer;
@@ -49,7 +55,7 @@ body{
         &::-moz-range-track{
             width: 300px;
             height: 10px;
-            border-radius: 20px;
+            border-radius: 1rem;
             background-color:rgba(black, $alpha: 0.4);
 
         }
